Fixing hover state of buttons for smooth transition of arrows, adjusting spacing of user-added buttons per issue #96

--- a/assets/styles/components/_newsletter-form.scss
+++ b/assets/styles/components/_newsletter-form.scss
@@ -4,10 +4,6 @@ form.newsletter {
   @include media-md {
     max-width: 498px;
   }
-  // Hide arrow
-  button::after {
-    display: none;
-  }
 
   .form-row {
     justify-content: flex-end;
