--- a/assets/styles/components/_ui-elements.scss
+++ b/assets/styles/components/_ui-elements.scss
@@ -13,19 +13,35 @@ a.button {
   display: inline-block;
   padding: 0 90px 0 18px;
 
-  &::after {
-    top: 50%;
-    right: 18px;
-    content: '';
-    width: 54px;
-    height: 23px;
-    position: absolute;
-    transform: translateY(-50%);
-    background-image: url('../images/arrow-white.svg');
-  }
+  &:not(.-small) {
+    &::before,
+    &::after {
+      @include transition(opacity);
+      top: 50%;
+      right: 18px;
+      content: '';
+      width: 54px;
+      height: 23px;
+      position: absolute;
+      transform: translateY(-50%);
+    }
+    &::before {
+      opacity: 1;
+      background-image: url('../images/arrow-white.svg');
+    }
+    &::after {
+      opacity: 0;
+      background-image: url('../images/arrow-black.svg');
+    }
 
-  &:hover::after {
-    background-image: url('../images/arrow-black.svg');
+    &:hover {
+      &::before {
+        opacity: 0;
+      }
+      &::after {
+        opacity: 1;
+      }
+    }
   }
 
   @include media-nav {
@@ -34,6 +50,7 @@ a.button {
       line-height: 96px;
       padding: 0 128px 0 36px;
 
+      &::before,
       &::after {
         right: 36px;
       }
@@ -54,54 +71,53 @@ a.button {
     }
   }
 
-  // Hollow Variation
-  &.hollow {
-    @include buttonHollow(color('black'), color('white'));
-    &::after {
-      background-image: url('../images/arrow-black.svg');
-    }
-    &:hover::after {
-      background-image: url('../images/arrow-white.svg');
-    }
-
-    &.-red {
-      @include buttonHollow(color('red'), color('black'));
-      &::after {
-        background-image: url('../images/arrow-red.svg');
-      }
-      &:hover::after {
-        background-image: url('../images/arrow-black.svg');
-      }
-    }
-    &.-white {
-      @include buttonHollow(color('white'), color('black'));
-
-      &::after {
-        background-image: url('../images/arrow-white.svg');
-      }
-      &:hover::after {
-        background-image: url('../images/arrow-black.svg');
-      }
-    }
-  }
-
   // Color Variations
   &.-red {
     @include button(color('red'), color('black'));
-    &::after {
+    &::before {
       background-image: url('../images/arrow-black.svg');
     }
-    &:hover::after {
+    &::after {
       background-image: url('../images/arrow-red.svg');
     }
   }
   &.-white {
     @include button(color('white'), color('black'));
-    &::after {
+    &::before {
       background-image: url('../images/arrow-black.svg');
     }
-    &:hover::after {
+    &::after {
       background-image: url('../images/arrow-white.svg');
+    }
+  }
+
+  // Hollow Variation
+  &.hollow {
+    @include buttonHollow(color('black'), color('white'));
+    &::before {
+      background-image: url('../images/arrow-black.svg');
+    }
+    &::after {
+      background-image: url('../images/arrow-white.svg');
+    }
+
+    &.-red {
+      @include buttonHollow(color('red'), color('black'));
+      &::before {
+        background-image: url('../images/arrow-red.svg');
+      }
+      &::after {
+        background-image: url('../images/arrow-black.svg');
+      }
+    }
+    &.-white {
+      @include buttonHollow(color('white'), color('black'));
+      &::before {
+        background-image: url('../images/arrow-white.svg');
+      }
+      &::after {
+        background-image: url('../images/arrow-black.svg');
+      }
     }
   }
 }
